# rustingcrab

./: .gitignore  CNAME  README.md  Untitled.ipynb  _config.yaml
Criar e rodar VM com QEMU/: README.md
_layouts/: default.html
code_samples/a_star/: README.md  a_star.rs
code_samples/arena/: README.md
code_samples/arena/src/: main.rs
code_samples/cargo_workspaces/: README.md
code_samples/cargo_workspaces/gerenciador_tarefas/: Cargo.toml
code_samples/circulos/: Cargo.toml  README.md
code_samples/circulos/src/: main.rs
code_samples/coroutines/: Cargo.toml  README.md  rust-toolchain.toml
code_samples/coroutines/src/: main.rs
code_samples/csv-schema-validator/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
code_samples/csv-schema-validator/csv-schema-validator-derive/: Cargo.toml
code_samples/csv-schema-validator/csv-schema-validator-derive/src/: lib.rs
code_samples/csv-schema-validator/src/: lib.rs
code_samples/csv-schema-validator/tests/: validate_csv_test.rs
code_samples/custom_cargo/: README.md
code_samples/custom_cargo/build_script/: Cargo.toml  build.rs
code_samples/db/: Cargo.toml
code_samples/db/src/: main.rs
code_samples/dsl/: Cargo.toml  README.md
code_samples/dsl/src/: main.rs
code_samples/emprestimos_arrays/: emprestimo_arrays.md  teste1.rs  teste2.rs
code_samples/env_inspector/: Cargo.toml  Dockerfile  README.md  Vagrantfile  pod.yaml
code_samples/env_inspector/src/: lib.rs
code_samples/estrutura/: README.md
code_samples/from_python/: Cargo.toml  README.md  teste.py
code_samples/from_python/src/: lib.rs  main.rs
code_samples/game/: README.md
code_samples/game/ferris_hunter/: Cargo.toml
code_samples/gossip/: README.md
code_samples/gossip/gossip/: Cargo.toml
code_samples/gossip/gossip/src/: main.rs
code_samples/gravity/: Cargo.toml  README.md
code_samples/gravity/src/: main.rs
code_samples/guia_apis_rust/: README.md
code_samples/guia_apis_rust/api_rest/: README.md
code_samples/guia_apis_rust/api_rest/seguranca/: .env  Cargo.toml  init.sql  testes.txt
code_samples/guia_apis_rust/api_rest/seguranca/src/: main.rs
code_samples/guia_apis_rust/graphql/: Cargo.toml  README.md  testes.txt
code_samples/guia_apis_rust/graphql/src/: main.rs
code_samples/guia_apis_rust/websocket/websocket_chat/: Cargo.toml
code_samples/guia_apis_rust/websocket/websocket_chat/src/: main.rs
code_samples/idiomatic_adt/: README.md  com_adt.rs  sem_adt.rs
code_samples/jsonutil/: Cargo.toml  test.sh
code_samples/jupyter/: README.md  Untitled.ipynb
code_samples/labirinto/: README.md
code_samples/leetcode/: README.md  breadth_first_search.rs  bthree_transversal.rs  depth_first_search.rs  dynamic_programming.rs  english.md  fast_slow_pointers.rs  matrix_transversal.rs  modified_binary_search.rs  monotonic_stack.rs  overlapping_interval_greedy.rs  reverted_list.rs  sliding_window.rs  subarray_sum.rs  top_k.rs  two_sum.py  two_sum.rs
code_samples/life/: Cargo.toml  README.md
code_samples/lifetime/: README.md  lifetime2.rs
code_samples/mandala/: Cargo.toml  README.md
code_samples/nll/: README.md
code_samples/opentelemetry/: ENGLISH.md  README.md
code_samples/opentelemetry/sample/: Cargo.toml  run-jaeger.sh
code_samples/opentelemetry/sample/src/: main.rs
code_samples/passgen/: Cargo.toml  README.md  config.toml
code_samples/perf_prof/: ENGLISH.md  README.md
code_samples/perf_prof/antes/: Cargo.toml
code_samples/perf_prof/antes/benches/: bench.rs
code_samples/perf_prof/antes/src/: lib.rs
code_samples/perf_prof/depois/: Cargo.toml
code_samples/perf_prof/depois/benches/: bench.rs
code_samples/perf_prof/depois/src/: lib.rs
code_samples/psycho/: Cargo.toml  README.md
code_samples/raytracing/: README.md
code_samples/regex_helper/: Cargo.toml  README.md
code_samples/rust_cnn/: Cargo.toml  README.md  pesos.json
code_samples/rust_ffi/: Esses são os códigos-fonte que eu uso em.md  README.md
code_samples/rust_learning/: Cargo.toml  README.md
code_samples/rust_loves_go/: README.md
code_samples/rust_vs_go/: README.md
code_samples/rust_vs_go/performance-test/servers/rust_axum/: Cargo.toml
code_samples/rust_vs_go/performance-test/servers/rust_axum/src/: main.rs
code_samples/rust_vs_java/: README.md  run_tests.sh
code_samples/shunting_yard/: README.md
code_samples/solana-first-steps/: README.md
code_samples/solana-first-steps/program/: Cargo.toml
code_samples/solana-first-steps/program/tests/: devnet-invoke.rs
code_samples/sounds/: README.md
code_samples/teleprompter/: Cargo.toml  README.md
code_samples/threads_arc/: right.rs  wrong.rs
code_samples/tratamento_null_erro/: README.md  option.rs  result.rs
code_samples/wgpu/: Cargo.toml  README.md
english/: README.md
rusting_with_style_PTBR/: README.md
rusting_with_style_PTBR/lição 1 - Conhecendo/: README.md
rusting_with_style_PTBR/lição 10 - Programação funcional /: README.md
rusting_with_style_PTBR/lição 11 - Arquivos/: README.md
rusting_with_style_PTBR/lição 12 - databases/: README.md
rusting_with_style_PTBR/lição 13 - HTTP_REST/: README.md
rusting_with_style_PTBR/lição 13 - HTTP_REST/codigo/resposta/: Cargo.toml  comando_docker.sh
rusting_with_style_PTBR/lição 13 - HTTP_REST/codigo/resposta/migrations/2025-01-04-131608_cria-pessoa/: up.sql
rusting_with_style_PTBR/lição 13 - HTTP_REST/codigo/resposta/src/: main.rs
rusting_with_style_PTBR/lição 13 - HTTP_REST/codigo/resposta/src/db/: mod.rs  models.rs  schema.rs
rusting_with_style_PTBR/lição 2 - Estrutura/: README.md
rusting_with_style_PTBR/lição 3 - Desafio 1/: README.md
rusting_with_style_PTBR/lição 4 - correção e variáveis/: README.md
rusting_with_style_PTBR/lição 5 - mais sobre variáveis/: README.md
rusting_with_style_PTBR/lição 6 - match e outras coisas/: README.md
rusting_with_style_PTBR/lição 7 - OOP e traits/: README.md
rusting_with_style_PTBR/lição 8 - borrow check hell/: README.md
rusting_with_style_PTBR/lição 9 - Rc, Refcell e derreferência/: README.md  licao09.md
trait-box-polimorfismo/: README.md
(+184 files in other folders)
