# csv-schema-validator/Cargo.toml (RAIZ - Este arquivo é tanto o manifesto do workspace quanto do crate principal ".")
[workspace]
members = [
    ".",                           # "." refere-se a este diretório (crate principal)
    "csv-schema-validator-derive", # refere-se a subpasta
]
# Especifica o resolver para evitar o aviso
resolver = "2"

# --- TUDO ABAIXO É PARA O CRATE PRINCIPAL (devido ao ".") ---
[package]
name = "csv-schema-validator"
version = "0.1.0"
edition = "2021"
description = "Derive macro to validate CSV"
license = "MIT"
categories = ["parsing", "development-tools"]
# TODO: Atualize a URL do repositório antes de publicar
# repository = "https://github.com/seu-usuario/csv-schema-validator"

[dependencies]
# Este path está correto para a estrutura:
# crate principal (.) -> depende de -> crate derive (./csv-schema-validator-derive)
csv-schema-validator-derive = { path = "./csv-schema-validator-derive", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
assert_matches = "1.5"
# --- FIM DAS SEÇÕES DO CRATE PRINCIPAL ---