[workspace]
members = [
    ".",                           
    "csv-schema-validator-derive", 
]
resolver = "2"

# --- This is for main crate ---
[package] 
name = "csv-schema-validator"
version = "0.1.1"
edition = "2021"
description = "Derive macro to validate CSV"
authors     = ["Cleuton Sampaio <cleuton@cleutonsampaio.com>"]
categories = ["parsing", "development-tools"]
license     = "MIT/Apache-2.0"
repository  = "https://github.com/cleuton/rustingcrab/tree/main/code_samples/csv-schema-validator"
readme      = "README.md" 
[dependencies]
# csv-schema-validator-derive = "0.1.0"
csv-schema-validator-derive = { path = "./csv-schema-validator-derive", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
assert_matches = "1.5"
