[package]
name = "otel_jaeger_demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features=["full"] }
tracing = "0.1.40"
tracing-subscriber = { version="0.3", features=["env-filter","registry","std","fmt"] }
tracing-opentelemetry = "0.32"

opentelemetry = { version="0.31", features=["trace"] }
opentelemetry_sdk = { version="0.31", features=["trace"] }
opentelemetry-otlp = { version="0.31", features=["http-proto","trace","reqwest-blocking-client"] }
opentelemetry-http = "0.31"
http = "1"
