[package]
name = "api_simples_tls_jwt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio           = { version = "1", features = ["full"] }
axum            = { version = "0.6", features = ["headers"] }
axum-server     = { version = "0.3", features = ["tls-rustls"] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
sqlx            = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
dotenvy         = "0.15"
jsonwebtoken    = "8"
headers         = "0.3"
chrono          = { version = "0.4", features = ["serde"] }
