[package]
name = "exemplo_postgres_orm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Diesel + Postgres
diesel = { version = "2.2.6", features = ["postgres"] }
dotenvy = "0.15"

# tiny_http para servir HTTP
tiny_http = "0.9"

# Para serializar/deserializar em JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
